locally host css for ease dev

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'>
 
-<link rel='stylesheet' href='//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css'>
+<link rel='stylesheet' href='jquery.dataTables.min.css'>
 
 <link rel='stylesheet' href='https://cdn.datatables.net/searchpanes/2.0.2/css/searchPanes.dataTables.min.css'>
 
@@ -24,7 +24,7 @@
 
 <h1>lokaalgebrand.nl</h1>
 
-<button id="hamburgerBtn">&#9776;</button>
+<button id="hamburgerBtn">Show filters</button>
 
 <div class="dtsp-verticalContainer">
 
